@@ -3,8 +3,6 @@ package ru.job4j.storage;
 import org.junit.Test;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.*;
@@ -14,161 +12,73 @@ public class ControlQualityTest {
     @Test
     public void test1() {
         Storage warehouse = new Warehouse();
-        Storage shop = new Shop(30);
+        Storage shop = new Shop();
         Storage trash = new Trash();
-        ControlQuality controlQuality = new ControlQuality(Arrays.asList(
-                warehouse,
-                shop,
-                trash
-        ));
-        Food food = new Food(
-                "d",
-                LocalDate.of(2022, 4, 10),
-                LocalDate.of(2022, 1, 1),
-                120
+        ControlQuality controlQuality = new ControlQuality(
+                List.of(
+                        warehouse,
+                        shop,
+                        trash
+                )
         );
-        controlQuality.checkup(List.of(
-                new Food(
-                        "a",
-                        LocalDate.of(2022, 1, 30),
-                        LocalDate.of(2022, 1, 1),
-                        100
-                ),
-                new Food(
-                        "b",
-                        LocalDate.of(2022, 1, 22),
-                        LocalDate.of(2022, 1, 1),
-                        110
-                ),
-                new Food(
-                        "c",
-                        LocalDate.of(2022, 2, 25),
-                        LocalDate.of(2022, 1, 1),
-                        110
-                ),
-                food
-        ));
-        assertEquals(warehouse.getStorageFoodList().get(0), food);
+        Food food = new Food("d", LocalDate.now().plusDays(100), LocalDate.now().minusDays(30), 120);
+        controlQuality.checkFoods(
+                List.of(
+                    new Food("a", LocalDate.now().plusDays(10), LocalDate.now().minusDays(30), 100),
+                    new Food("b", LocalDate.now().minusDays(5), LocalDate.now().minusDays(30), 110),
+                    new Food("c", LocalDate.now().plusDays(30), LocalDate.now().minusDays(30), 110),
+                    food
+                )
+        );
+        assertEquals(food, warehouse.getStorageFoodList().get(0));
     }
 
     @Test
     public void test2() {
-        Food food = new Food(
-                "d",
-                LocalDate.of(2022, 4, 10),
-                LocalDate.of(2022, 1, 1),
-                120
-        );
-        Storage warehouse = new Warehouse(new ArrayList<>(Arrays.asList(
-                new Food(
-                        "a",
-                        LocalDate.of(2022, 1, 30),
-                        LocalDate.of(2022, 1, 1),
-                        100
-                ),
-                new Food(
-                        "b",
-                        LocalDate.of(2022, 1, 22),
-                        LocalDate.of(2022, 1, 1),
-                        110
-                ),
-                new Food(
-                        "c",
-                        LocalDate.of(2022, 2, 25),
-                        LocalDate.of(2022, 1, 1),
-                        110
-                ),
-                food
-        )));
-        Storage shop = new Shop(30);
+        Food food = new Food("b", LocalDate.now().minusDays(5), LocalDate.now().minusDays(30), 110);
+        Storage warehouse = new Warehouse();
+        Storage shop = new Shop();
         Storage trash = new Trash();
-        ControlQuality controlQuality = new ControlQuality(List.of(
-                warehouse,
-                shop,
-                trash
-        ));
-        controlQuality.checkup();
-        assertEquals(food, warehouse.getStorageFoodList().get(0));
+        ControlQuality controlQuality = new ControlQuality(
+                List.of(
+                    warehouse,
+                    shop,
+                    trash
+                )
+        );
+        controlQuality.checkFoods(
+                List.of(
+                        new Food("a", LocalDate.now().plusDays(10), LocalDate.now().minusDays(30), 100),
+                        food,
+                        new Food("c", LocalDate.now().plusDays(30), LocalDate.now().minusDays(30), 110),
+                        new Food("d", LocalDate.now().plusDays(100), LocalDate.now().minusDays(30), 120)
+                )
+        );
+        assertEquals(food, trash.getStorageFoodList().get(0));
     }
 
     @Test
     public void test3() {
         Storage warehouse = new Warehouse();
-        Storage shop = new Shop(30);
+        Storage shop = new Shop();
         Storage trash = new Trash();
-        ControlQuality controlQuality = new ControlQuality(Arrays.asList(
-                warehouse,
-                shop,
-                trash
-        ));
-        Food food1 = new Food(
-                "a",
-                LocalDate.of(2022, 1, 30),
-                LocalDate.of(2022, 1, 1),
-                100
-        );
-        Food food2 = new Food(
-                "c",
-                LocalDate.of(2022, 2, 25),
-                LocalDate.of(2022, 1, 1),
-                110
-        );
-        controlQuality.checkup(List.of(
-                food1,
-                new Food(
-                        "b",
-                        LocalDate.of(2022, 1, 22),
-                        LocalDate.of(2022, 1, 1),
-                        110
-                ),
-                food2,
-                new Food(
-                        "d",
-                        LocalDate.of(2022, 4, 10),
-                        LocalDate.of(2022, 1, 1),
-                        120
-        )));
-        assertEquals(List.of(food1, food2), shop.getStorageFoodList());
-    }
-
-    @Test
-    public void test4() {
-        Food food1 = new Food(
-                "a",
-                LocalDate.of(2022, 1, 30),
-                LocalDate.of(2022, 1, 1),
-                100
-        );
-        Food food2 = new Food(
-                "c",
-                LocalDate.of(2022, 2, 25),
-                LocalDate.of(2022, 1, 1),
-                110
-        );
-        Storage shop = new Shop(30, new ArrayList<>(Arrays.asList(
-                food1,
-                new Food(
-                        "b",
-                        LocalDate.of(2022, 1, 22),
-                        LocalDate.of(2022, 1, 1),
-                        110
-                ),
-                food2,
-                new Food(
-                        "d",
-                        LocalDate.of(2022, 4, 10),
-                        LocalDate.of(2022, 1, 1),
-                        120
+        ControlQuality controlQuality = new ControlQuality(
+                List.of(
+                    warehouse,
+                    shop,
+                    trash
                 )
-        )));
-        Storage warehouse = new Warehouse();
-        Storage trash = new Trash();
-        ControlQuality controlQuality = new ControlQuality(List.of(
-                warehouse,
-                shop,
-                trash
-        ));
-        controlQuality.checkup();
+        );
+        Food food1 = new Food("a", LocalDate.now().plusDays(10), LocalDate.now().minusDays(30), 100);
+        Food food2 = new Food("c", LocalDate.now().plusDays(30), LocalDate.now().minusDays(30), 110);
+        controlQuality.checkFoods(
+                List.of(
+                        food1,
+                        new Food("b", LocalDate.now().minusDays(5), LocalDate.now().minusDays(30), 110),
+                        food2,
+                        new Food("d", LocalDate.now().plusDays(100), LocalDate.now().minusDays(30), 120)
+                )
+        );
         assertEquals(List.of(food1, food2), shop.getStorageFoodList());
     }
 }
